Add parameter for done tasks request
